# QodeAssist

./: .clang-format  .gitignore  .gitmodules  .qmlformat.ini  CMakeLists.txt  CMakePresets.json  CodeHandler.cpp  CodeHandler.hpp  CompletionProgressHandler.cpp  CompletionProgressHandler.hpp  ConfigurationManager.cpp  ConfigurationManager.hpp  DocumentContextReader.cpp  DocumentContextReader.hpp  LICENSE  LLMClientInterface.cpp  LLMClientInterface.hpp  LLMProvidersManager.cpp  LLMProvidersManager.hpp  LLMSuggestion.cpp  LLMSuggestion.hpp  LSPCompletion.hpp  PromptProviderChat.hpp  PromptProviderFim.hpp  PromptTemplateManager.cpp  PromptTemplateManager.hpp  QodeAssist.json.in  QodeAssist.qrc  QodeAssistClient.cpp  QodeAssistClient.hpp  QodeAssistConstants.hpp  QodeAssistData.hpp  QodeAssistHoverHandler.cpp  QodeAssistHoverHandler.hpp  QodeAssistProjectPanel.hpp  QodeAssistSettings.cpp  QodeAssistSettings.hpp  QodeAssistUtils.hpp  QodeAssisttr.h  QuickRefactorHandler.cpp  (+15 more)
ChatView/: AgentRoleController.cpp  AgentRoleController.hpp  CMakeLists.txt  ChatAgentController.cpp  ChatAgentController.hpp  ChatCompressor.cpp  ChatCompressor.hpp  ChatConfigurationController.cpp  ChatConfigurationController.hpp  ChatData.hpp  ChatFileManager.cpp  ChatFileManager.hpp  ChatHistoryStore.cpp  ChatHistoryStore.hpp  ChatModel.cpp  ChatModel.hpp  ChatRootView.cpp  ChatRootView.hpp  ChatSerializer.cpp  ChatSerializer.hpp  ChatUtils.cpp  ChatUtils.h  ChatView.cpp  ChatView.hpp  ChatWidget.cpp  ChatWidget.hpp  ClientInterface.cpp  ClientInterface.hpp  FileEditController.cpp  FileEditController.hpp  FileEditItem.cpp  FileEditItem.hpp  FileItem.cpp  FileItem.hpp  FileMentionItem.cpp  FileMentionItem.hpp  InputTokenCounter.cpp  InputTokenCounter.hpp  MessagePart.hpp  SessionFileRegistry.cpp  (+1 more)
UIControls/: CMakeLists.txt
bench/: CMakeLists.txt  main.cpp  run-bench.sh.in
chatview/: BaseChatWidget.cpp  BaseChatWidget.hpp  CMakeLists.txt  ChatModel.cpp  ChatModel.hpp  ChatRootView.cpp  ChatRootView.hpp  ChatUtils.cpp  ChatUtils.h  ChatWidget.cpp  ChatWidget.hpp  ClientInterface.cpp  ClientInterface.hpp  MessagePart.hpp
context/: CMakeLists.txt  ChangesManager.cpp  ChangesManager.h  ContentFile.hpp  ContextManager.cpp  ContextManager.hpp  DocumentContextReader.cpp  DocumentContextReader.hpp  DocumentReaderQtCreator.hpp  EnhancedRAGSimilaritySearch.cpp  EnhancedRAGSimilaritySearch.hpp  EnvBlockFormatter.cpp  EnvBlockFormatter.hpp  FileChunker.cpp  FileChunker.hpp  IContextManager.hpp  IDocumentReader.hpp  IProjectScanner.hpp  IgnoreManager.cpp  IgnoreManager.hpp  ProgrammingLanguage.cpp  ProgrammingLanguage.hpp  ProjectScannerQtCreator.cpp  ProjectScannerQtCreator.hpp  ProjectUtils.cpp  ProjectUtils.hpp  RAGData.hpp  RAGManager.cpp  RAGManager.hpp  RAGPreprocessor.cpp  RAGPreprocessor.hpp  RAGSimilaritySearch.cpp  RAGSimilaritySearch.hpp  RAGStorage.cpp  RAGStorage.hpp  RAGVectorizer.cpp  RAGVectorizer.hpp  TokenUtils.cpp  TokenUtils.hpp  Utils.hpp
floweditor/: CMakeLists.txt  FlowEditor.cpp  FlowEditor.hpp  FlowItem.cpp  FlowItem.hpp  FlowsModel.cpp  FlowsModel.hpp  GridBackground.cpp  GridBackground.hpp  TaskConnectionItem.cpp  TaskConnectionItem.hpp  TaskConnectionsModel.cpp  TaskConnectionsModel.hpp  TaskItem.cpp  TaskItem.hpp  TaskModel.cpp  TaskModel.hpp  TaskParametersModel.cpp  TaskParametersModel.hpp  TaskPortItem.cpp  TaskPortItem.hpp  TaskPortModel.cpp  TaskPortModel.hpp
llmcore/: BaseClient.hpp  BaseTool.cpp  BaseTool.hpp  CMakeLists.txt  ChunkGenerator.cpp  ChunkGenerator.h  ClaudeClient.cpp  ClaudeClient.hpp  ClaudeConfig.hpp  ClaudeMessage.cpp  ClaudeMessage.hpp  ClaudeRequest.hpp  ClaudeResponse.cpp  ClaudeResponse.hpp  CodeChunker.cpp  CodeChunker.h  ContentBlocks.hpp  ContextData.hpp  DataBuffers.hpp  EmbeddingsGenerator.cpp  EmbeddingsGenerator.h  EmbeddingsManager.cpp  EmbeddingsManager.h  EmbeddingsStorage.cpp  EmbeddingsStorage.hpp  GoogleAIClient.cpp  GoogleAIClient.hpp  GoogleAIConfig.hpp  GoogleMessage.cpp  GoogleMessage.hpp  HttpClient.cpp  HttpClient.hpp  IPromptProvider.hpp  ITool.hpp  IToolsFactory.hpp  IToolsManager.hpp  InputParameters.hpp  LLMProvider.hpp  LLMProvidersManager.cpp  LLMProvidersManager.hpp  (+47 more)
logger/: CMakeLists.txt  EmptyRequestPerformanceLogger.hpp  IRequestPerformanceLogger.hpp  Logger.cpp  Logger.hpp  RequestPerformanceLogger.cpp  RequestPerformanceLogger.hpp
pluginllmcore/: BaseTool.cpp  BaseTool.hpp  CMakeLists.txt  ContentBlocks.hpp  ContextData.hpp  DataBuffers.hpp  HttpClient.cpp  HttpClient.hpp  IPromptProvider.hpp  IProviderRegistry.hpp  IToolsManager.hpp  PromptProviderChat.hpp  PromptProviderFim.hpp  PromptTemplate.hpp  PromptTemplateManager.cpp  PromptTemplateManager.hpp  Provider.cpp  Provider.hpp  ProviderID.hpp  ProvidersManager.cpp  ProvidersManager.hpp  RequestConfig.hpp  RequestHandlerBase.cpp  RequestHandlerBase.hpp  RequestType.hpp  ResponseCleaner.hpp  RulesLoader.cpp  RulesLoader.hpp  SSEBuffer.cpp  SSEBuffer.hpp  ValidationUtils.cpp  ValidationUtils.hpp
settings/: AgentDetailPane.cpp  AgentDetailPane.hpp  AgentDuplicator.cpp  AgentDuplicator.hpp  AgentListItem.cpp  AgentListItem.hpp  AgentListPane.cpp  AgentListPane.hpp  AgentModelDialog.cpp  AgentModelDialog.hpp  AgentRole.cpp  AgentRole.hpp  AgentRoleDialog.cpp  AgentRoleDialog.hpp  AgentRolesWidget.cpp  AgentRolesWidget.hpp  AgentsSettingsPage.cpp  AgentsSettingsPage.hpp  Assisttr.h  ButtonAspect.hpp  CMakeLists.txt  ChatAssistantSettings.cpp  ChatAssistantSettings.hpp  CodeCompletionSettings.cpp  CodeCompletionSettings.hpp  CollapsibleHeader.cpp  CollapsibleHeader.hpp  ConfigurationManager.cpp  ConfigurationManager.hpp  ContextSettings.cpp  ContextSettings.hpp  CustomPromptSettings.cpp  CustomPromptSettings.hpp  GeneralSettings.cpp  GeneralSettings.hpp  McpClientsListAspect.cpp  McpClientsListAspect.hpp  McpSettings.cpp  McpSettings.hpp  ModelSelector.cpp  (+44 more)
tasks/: BaseTask.cpp  BaseTask.hpp  CMakeLists.txt  DemoTasks.cpp  Flow.cpp  Flow.hpp  FlowManager.cpp  FlowManager.hpp  FlowRegistry.cpp  FlowRegistry.hpp  RegisterTasksList.hpp  SimpleLLMTask.cpp  SimpleLLMTask.hpp  (+6 more)
(+1030 files in other folders)
